--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </section>
     <footer id="footer">
         <p>ghjdfg</p>
+        <img class="fox2" src="img/fox.gif" height="250" width="130" alt="">
         <img src="img/footer2.png" class="fot-img" alt="">
+        
     </footer>
  <!-- jQuery -->
  <script
