--- a/index.html
+++ b/index.html
@@ -24,9 +24,28 @@
         <img src="img/eco title.png" class="title-img" alt="">
         <img src="img/grass.png" class="grass-img"alt="">
     </section>
+    <section class="eco-systems">
+       <div class="systems">
+           <div class="system">
+               <h2 class="system__title">Eco title</h2>
+               <p class="system__text">Nullam urna dolor, aliquet ut ligula non, aliquam varius urna. Aenean rhoncus ante.</p>
+           </div>
+           <div class="system">
+            <h2 class="system__title">Eco title</h2>
+            <p class="system__text">Nullam urna dolor, aliquet ut ligula non, aliquam varius urna. Aenean rhoncus ante.</p>
+        </div>
+        <div class="system">
+            <h2 class="system__title">Eco title</h2>
+            <p class="system__text">Nullam urna dolor, aliquet ut ligula non, aliquam varius urna. Aenean rhoncus ante.</p>
+        </div>
+       </div> 
+    </section>
+    <section class="animals">	
+        
+    </section>
     <footer id="footer">
         <p>ghjdfg</p>
-        <img class="fox2" src="img/fox.gif" height="250" width="130" alt="">
+        <img class="fox2" src="img/fox.gif" alt="">
         <img src="img/footer2.png" class="fot-img" alt="">
         
     </footer>
