--- a/index.html
+++ b/index.html
@@ -40,11 +40,42 @@
         </div>
        </div> 
     </section>
-    <section class="animals">	
-        
+    <section class="animals">
+        <h2 class="animals__title">Animals and Plants</h2>
+        <div class="cards">
+            <div class="card__bg">
+            <div class="card">
+                <img class="deco"src="/img/DECO3.png" alt="">
+                <h3 class="card__title">This is title</h3>
+                <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
+                <a href="" class="btn-card1">More info</a>
+            </div>
+        </div>
+        <div class="card__bg2">
+            <div class="card">
+                    <img class="deco"src="/img/DECO1.png" alt="">
+                <h3 class="card__title">This is title</h3>
+                <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
+                <a href="" class="btn-card2">More info</a>
+            </div>
+        </div>
+        <div class="card__bg">
+            <div class="card">
+                <img class="deco"src="/img/DECO2.png" alt="">
+                <h3 class="card__title">This is title</h3>
+                <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
+                <a href="" class="btn-card1">More info</a>
+            </div>
+        </div>
+        </div>
     </section>
     <footer id="footer">
-        <p>ghjdfg</p>
+            <h2>Contact us</h2>
+            <div class="footer__text">
+                <h3>ECO ENVIRONMENT </h3>
+                <p>Ecology </p>
+                <p>Visit us at ECO Land</p>
+            </div>  
         <img class="fox2" src="img/fox.gif" alt="">
         <img src="img/footer2.png" class="fot-img" alt="">
         
