--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="cards">
             <div class="card__bg">
             <div class="card">
-                <img class="deco"src="/img/DECO3.png" alt="">
+                <img class="deco"src="img/DECO3.png" alt="">
                 <h3 class="card__title">This is title</h3>
                 <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
                 <a href="" class="btn-card1">More info</a>
@@ -53,7 +53,7 @@
         </div>
         <div class="card__bg2">
             <div class="card">
-                    <img class="deco"src="/img/DECO1.png" alt="">
+                    <img class="deco"src="img/DECO1.png" alt="">
                 <h3 class="card__title">This is title</h3>
                 <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
                 <a href="" class="btn-card2">More info</a>
@@ -61,7 +61,7 @@
         </div>
         <div class="card__bg">
             <div class="card">
-                <img class="deco"src="/img/DECO2.png" alt="">
+                <img class="deco"src="img/DECO2.png" alt="">
                 <h3 class="card__title">This is title</h3>
                 <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
                 <a href="" class="btn-card1">More info</a>
