--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
        </div> 
     </section>
     <section class="animals">
+        
         <h2 class="animals__title">Animals and Plants</h2>
         <div class="cards">
             <div class="card__bg">
-            <div class="card">
+            <div class="card card1">
                 <img class="deco"src="img/DECO3.png" alt="">
                 <h3 class="card__title">This is title</h3>
                 <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
@@ -52,15 +53,15 @@
             </div>
         </div>
         <div class="card__bg2">
-            <div class="card">
-                    <img class="deco"src="img/DECO1.png" alt="">
+            <div class="card card2">
+                    <img src="img/fish.png" class="fish" alt="">
                 <h3 class="card__title">This is title</h3>
                 <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
                 <a href="" class="btn-card2">More info</a>
             </div>
         </div>
         <div class="card__bg">
-            <div class="card">
+            <div class="card card1">
                 <img class="deco"src="img/DECO2.png" alt="">
                 <h3 class="card__title">This is title</h3>
                 <p class="card__text">Cras lobortis porttitor lacus sed molestie. Phasellus et ex vel magna volutpat varius. In sit amet massa sed nulla facilisis maximus vitae ac erat.</p>
